Fixed dots js, first test on mobile

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -26,7 +26,7 @@
 				letter-spacing: 16px;
 			}
 
-			.canvasWrap{
+			#canvasWrap{
 				width: 493px;
 			}
 
@@ -118,7 +118,7 @@
 @media only screen and (max-width: 1024px) and (orientation: landscape){
 	#lsWrap{
 		.innerWrap{
-			.canvasWrap{
+			#canvasWrap{
 				width: 395px;
 			}
 		}
@@ -146,7 +146,7 @@
 				}
 			}
 
-			.canvasWrap{
+			#canvasWrap{
 				width: 293px;
 			}
 		}
@@ -194,15 +194,11 @@
 				}
 			}
 
-			.canvasWrap{
+			#canvasWrap{
 				width: 43%;
 				right: 40px;
 				background-size: contain;
 				background-repeat: repeat;
-
-				#dotCanvas{
-					display: none;
-				}
 			}
 
 			footer{
