--- a/scss/styling.scss
+++ b/scss/styling.scss
@@ -132,14 +132,13 @@
 				}
 			}
 
-			.canvasWrap{
+			#canvasWrap{
 				// border: 1px solid aqua;
 				position: absolute;
 				z-index: 0;
 				width: 728px;
 				height: 100%;
 				overflow: hidden;
-				background: url('../img/dot_bg.png');
 				@include boxSize();
 				right: 10%;
 				@include boxShadow(10px, 5px, 60px);
